--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           name: "This is a sample run"
           command: |
             ls -ltr
-            echo " this is a sample repo"
+            echo $TESTENV
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
