--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,7 @@ jobs:
           command: "echo Hello, World!"
       - run:
           name: "This is a sample run"
-          command: |
-            ls -ltr
-            echo $TESTENV
+          command: "echo $TESTENV"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
