--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           command: "echo Hello, World!"
       - run:
           name: "This is a sample run"
-          command: "echo $TESTENV"
+          command: "echo ${TESTENV}"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
