--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,4 +35,6 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
-      - test-job
+      - test-job:
+          requires:
+            - say-hello
