--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           at: /tmp/artifacts
       - run:
           name: "test 01"
-          command: cat /tmp/artifact/test.txt
+          command: cat /tmp/artifacts/test.txt
 
   say-hello:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
