--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,66 +1,21 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  approval-job:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - run:
-          name: "test 01"
-          command: "echo thi sis test01"
-  test-job:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - attach_workspace:
-          at: /tmp/artifacts
-      - run:
-          name: "test 01"
-          command: cat /tmp/artifacts/test.txt
-
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/node:17.2
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+orbs:
+  node: circleci/node@5.0.2
+jobs:  
+  node_sample_job:
+    executor: node/default
     steps:
       - checkout
+      - node/install-packages:
+          pkg-manager: npm
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          command: yarn test
+          name: running test cases
       - run:
-          name: "This is a sample run"
-          command: |
-            node -v 
-            mkdir -p /tmp/artifacts
-            cd /tmp/artifacts
-            touch test.txt
-            echo "samplefdjkhfdjkhfd kjdhfkjdhf dfhkjhk khdfkjdhfk jhfkjh kjhfdkjhdfkjhkjhfdjkh fkjhjkhfd" > test.txt
-      - persist_to_workspace:
-          root: /tmp/artifacts
-          paths:
-            - test.txt
-
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+          command: npm build
+          name: Building the code          
 workflows:
-  say-hello-workflow:
+  node_workflow:
     jobs:
-      - say-hello          
-      - test-job:
-          requires: 
-            - say-hello
-      - Hold-for-Approval:
-          type: approval
-          requires:
-            - test-job
-      - approval-job:
-          requires:
-              - Hold-for-Approval
+      - node_sample_job
+    
